<resources>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="tape_reset">Tape reset</string>
    <string name="specification">Formal Specification</string>
    <string name="save_machine">Save Machine</string>
    <string name="bulk_test">Bulk Testing</string>
    <string name="save_task">Save Task</string>
    <string name="incorrect_inputs">Incorrect Inputs</string>
    <string name="derivation_table">Derivation table</string>
    <string name="derivation_linear">Linear derivation</string>
    <string name="derivation_fixed">Fixed derivation</string>
    <string name="derivation_tree">Derivation tree</string>
    <string name="configure">Configure</string>
    <string name="guide_see_also">See also:</string>
    <string name="guide_title_getting_started">Getting Started</string>
    <string name="guide_getting_started_new_machine">To create a new machine, tap the
        <b>New Machine</b>
        button in the main menu, then select what type of machine you would like to create. You will be taken to
        the Configuration Activity, where you can edit and save your new machine.
    </string>
    <string name="guide_getting_started_example_machine">If you would like to view an example machine
        created in CMSimulator, tap the <b>Example Machines</b> button in the main menu and select
        which machine you would like to open. You will be taken to the Simulation Activity where you
        can try the machine out.
    </string>
    <string name="guide_getting_started_example_grammar">If you would like to view an example grammar
        created in CMSimulator, tap the <b>Example Grammars</b> button in the main menu and select
        which grammar you would like to open. You will be taken to the Grammar Activity where you
        can try the grammar out.
    </string>
    <string name="guide_getting_started_example_machine_list">The available example machines are:\n
        \t \u2022 A deterministic finite automaton accepting words with 3k+1 characters\n
        \t \u2022 A deterministic finite automaton accepting words in the form of a
        <sup>
            <small>N</small>
        </sup>
        \n
        \t \u2022 A nondeterministic finite automaton accepting words ending with "01" or "10"\n
        \t \u2022 A deterministic push-down automaton accepting palindromes with marked middle\n
        \t \u2022 A deterministic push-down automaton accepting words in the form of
        a
        <sup>
            <small>N</small>
        </sup>
        b
        <sup>
            <small>N</small>
        </sup>
        \n
        \t \u2022 A nondeterministic push-down automaton accepting palindromes of even length\n
        \t \u2022 A deterministic linear-bounded automaton accepting words in the form of
        a
        <sup>
            <small>N</small>
        </sup>
        b
        <sup>
            <small>N</small>
        </sup>
        c
        <sup>
            <small>N</small>
        </sup>
        \n
        \t \u2022 A nondeterministic linear-bounded automaton accepting non-prime numbers in unary system\n
        \t \u2022 A deterministic Turing machine that multiplies two numbers in the unary system\n
        \t \u2022 A nondeterministic Turing machine that finds if one word is a substring of another
    </string>
    <string name="guide_getting_started_example_grammar_list">The available example grammars are:\n
        \t \u2022 A regular grammar accepting words in the form of a
        <sup>
            <small>N</small>
        </sup>
        \n
        \t \u2022 A regular grammar accepting words with 3k+1 characters\n
        \t \u2022 A regular grammar accepting words ending with "01" or "10"\n
        \t \u2022 A context free grammar accepting words in the form of a
        <sup>
            <small>N</small>
        </sup>
        b
        <sup>
            <small>N</small>
        </sup>
        \n
        \t \u2022 A context free grammar accepting words in the form of a
        <sup>
            <small>N</small>
        </sup>
        b
        <sup>
            <small>N</small>
        </sup>
        in the Chomsky normal form\n
        \t \u2022 A context free grammar accepting words in the form of ww
        <sup>
            <small>R</small>
        </sup>
        \n
        \t \u2022 A context sensitive grammar accepting words in the form of
        a
        <sup>
            <small>N</small>
        </sup>
        b
        <sup>
            <small>N</small>
        </sup>
        c
        <sup>
            <small>N</small>
        </sup>
    </string>
    <string name="guide_getting_started_load_machine">To load a previously-saved machine, tap the
        <b>Load Machine</b>
        button in the main menu, then select the file you would like to open.
    </string>
    <string name="guide_getting_started_tasks">To enter the Tasks menu, tap the <b>Tasks</b> button in
        the main menu. Then, to solve tasks currently assigned by people in your vicinity, tap the
        <b>Find Tasks</b>
        button. To create a new task for others to solve, tap the <b>New Task</b> button.
        To load a task you have previously prepared, tap the <b>Load Task</b> button.
    </string>
    <string name="guide_getting_started_grammar">To enter the Grammar menu, tap the <b>Grammar</b> button
        in the main menu. You will be taken to the grammar definition screen, where you can define or load
        the grammar you would like to work with.
    </string>
    <string name="guide_getting_started_settings">To view or change the application\'s settings, tap the
        <b>Settings</b>
        button in the main menu.
    </string>
    <string name="guide_title_configuration_activity">Configuration Activity</string>
    <string name="guide_title_special_symbols">Special Symbols</string>
    <string name="guide_special_symbols_introduction">Some symbols in the input alphabet and the stack alphabet
        have a special significance. Special symbols are automatically inserted into the alphabet when the
        machine is created and cannot be removed. However, you can customize some of them.
    </string>
    <string name="guide_special_symbols_epsilon">
        <b>ε (epsilon) -</b>
        the empty symbol for finite automata and
        push-down automata. Creating a transition with epsilon as the read symbol signifies that the transition
        may be performed without reading <i>any</i> symbol. Epsilon transitions are inherently nondeterministic -
        the machine may or may not choose to perform them at all (though a push-down automaton may be forced to
        if it is the only viable transition for the current state of the stack). Epsilon cannot be part of the input
        word.\n
        Epsilon is also used as a stack symbol with similar semantics - placing epsilon on the stack means nothing
        will be placed, and popping epsilon off the stack means nothing gets popped.
    </string>
    <string name="guide_special_symbols_blank">
        <b># (blank symbol) -</b>
        the default tape symbol for linear-bounded
        automata and Turing machines. This symbol can be customized.
    </string>
    <string name="guide_special_symbols_stack_start">
        <b>Z (stack start symbol) -</b>
        the symbol that is automatically placed
        at the bottom of the stack before the simulation starts. This symbol can be customized.
    </string>
    <string name="guide_special_symbols_left_end">
        <b>|&lt; (left end) -</b>
        marks the left end of the linear-bounded
        automaton\'s tape. It is inserted just before the simulation starts, and is ignored for the purposes of
        "expected
        output" in the <b>Bulk Test Activity</b>. It can be used as an input symbol in transitions, but it cannot be
        overwritten and the machine\'s head cannot move left of it. This symbol can be customized.
    </string>
    <string name="guide_special_symbols_right_end">
        <b>&gt;| (right end) -</b>
        marks the right end of the linear-bounded
        automaton\'s tape. It is inserted just before the simulation starts, and is ignored for the purposes of
        "expected
        output" in the <b>Bulk Test Activity</b>. It can be used as an input symbol in transitions, but it cannot be
        overwritten and the machine\'s head cannot move right of it.
    </string>
    <string name="guide_title_bulk_test_activity">Bulk Testing Activity</string>
    <string name="guide_title_grammar_definition">Grammar Definition</string>
    <string name="guide_title_grammar_simulation">Grammar Simulation</string>
    <string name="guide_grammar_simulation_instruction">In the grammar simulation activity you can test, simulate and
        visualize the derivation
        of words from the grammar rules. You can test words if they belong to the defined language and visualize them
        using either a derivation table,
        derivation tree, linear derivation or fixed derivation. Furthermore you can analyze the whole derivation
        sequence by stepping forward and
        backwards.
    </string>
    <string name="guide_grammar_simulation_menu">The menu in this activity allows you to switch back and forth between
        the 4 available kinds of
        visualizations and access the help page.
    </string>
    <string name="guide_title_grammar_input_testing">Input testing</string>
    <string name="guide_grammar_input_testing_instruction">The input testing allows you to enter words to the text field
        and check if the input
        word belongs to the defined language by pressing the <b>Test input</b> button. You can use the <b>Clear</b> button
        the clear the content of the input field.
        If you wish to test the empty word, please leave the input field clear.
    </string>
    <string name="guide_title_grammar_stepping">Stepping</string>
    <string name="guide_grammar_stepping_instruction">During the simulation process, you can step forward and backwards
        by selecting the
        appropriate buttons on the bottom of the screen. Each time a button is selected a different step of the
        simulation is shown on the screen.
    </string>
    <string name="guide_grammar_derivation_tree_instruction">The derivation tree visualizes the derivation sequence by
        drawing nodes for each
        symbol of each derivation and connecting them with lines. Each step of the simulation is represented by a new
        depth of the tree. The non-terminal
        symbols are colored yellow while the terminal symbols are colored green. At the end of the simulation the green
        nodes show the result.
    </string>
    <string name="guide_grammar_derivation_table_instruction">The derivation table visualizes the derivation sequence by
        showing the used rule
        and the output word next to each other in each step of the simulation.
    </string>
    <string name="guide_grammar_derivation_linear_instruction">The linear derivation visualizes the derivation sequence
        by writing the generated
        words in each step of the simulation in one line. The replaced part of the word is coloured yellow, while the
        new part of the word is
        coloured green. At the end of the simulation the result is shown underlined and bold.
    </string>
    <string name="guide_grammar_derivation_fixed_instruction">The fixed derivation visualizes the derivation sequence by
        showing the current
        word in one place in each step of the simulation. Apart from that a list of all the used rules are shown under
        the current word. In each step of
        the simulation the new parts of the word is coloured green and at the end of the simulation the result is shown
        underlined and bold.
    </string>
    <string name="guide_title_multiple_tests">Multiple Tests of Grammar</string>
</resources>