<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/guide_heading"
        android:text="@string/guide_title_grammar_simulation" />

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_simulation_instruction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">
        <ImageView
            style="@style/guide_image"
            android:src="@drawable/baseline_more_vert_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_grammar_simulation_menu" />
    </LinearLayout>

    <TextView
        style="@style/guide_subheading"
        android:text="@string/guide_title_grammar_input_testing"/>

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_input_testing_instruction"/>

    <TextView
        style="@style/guide_subheading"
        android:text="@string/guide_title_grammar_stepping"/>

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_stepping_instruction"/>

    <TextView
        style="@style/guide_subheading"
        android:text="@string/derivation_table"/>

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_derivation_table_instruction"/>

    <TextView
        style="@style/guide_subheading"
        android:text="@string/derivation_tree"/>

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_derivation_tree_instruction"/>

    <TextView
        style="@style/guide_subheading"
        android:text="@string/derivation_linear"/>

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_derivation_linear_instruction"/>

    <TextView
        style="@style/guide_subheading"
        android:text="@string/derivation_fixed"/>

    <TextView
        style="@style/guide_paragraph"
        android:text="@string/guide_grammar_derivation_fixed_instruction"/>

    <TextView
        style="@style/guide_see_also" />

    <LinearLayout
        android:id="@+id/linearLayout_guide_grammar_link"
        style="@style/guide_content_container">
        <ImageView
            style="@style/guide_content_bullet" />

        <TextView
            style="@style/guide_content_text"
            android:text="@string/guide_title_grammar_definition" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_guide_multiple_tests_link"
        style="@style/guide_content_container">
        <ImageView
            style="@style/guide_content_bullet" />

        <TextView
            style="@style/guide_content_text"
            android:text="@string/guide_title_multiple_tests" />
    </LinearLayout>
</LinearLayout>